--- a/jupyter3.ipynb
+++ b/jupyter3.ipynb
@@ -879,7 +879,9 @@
    "id": "b76a9719-2351-450a-9069-a976a91b3b0b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "matrix2=np.arange(0,1,0"
+   ]
   }
  ],
  "metadata": {
